[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Levels/Level.gd" type="Script" id=1]
[ext_resource path="res://Resources/EnvironmentTile.tres" type="TileSet" id=2]
[ext_resource path="res://Scenes/Triggerable/Portal.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resources/CharacterTile16.tres" type="TileSet" id=4]
[ext_resource path="res://Resources/CharacterTile32.tres" type="TileSet" id=5]
[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=6]

[node name="Level" type="Node2D"]
script = ExtResource( 1 )
player = ExtResource( 6 )

[node name="MapsContainer" type="Node2D" parent="."]

[node name="Ground" type="TileMap" parent="MapsContainer"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 16
collision_mask = 0
format = 1
tile_data = PoolIntArray( 589824, 19, 3, 589825, 19, 3, 589826, 19, 3, 589827, 19, 3, 589828, 19, 3, 589829, 19, 3, 589830, 19, 3, 589831, 19, 3, 589832, 19, 3, 589833, 19, 3, 589834, 19, 3, 589835, 19, 3, 589836, 19, 3, 589837, 19, 3, 589838, 19, 3, 589839, 19, 3, 589840, 19, 3, 589841, 19, 3, 589842, 19, 3, 589843, 19, 131078, 655360, 19, 65539, 655361, 19, 65539, 655362, 19, 65539, 655363, 19, 65539, 655364, 19, 65539, 655365, 19, 65539, 655366, 19, 65539, 655367, 19, 65539, 655368, 19, 65539, 655369, 19, 65539, 655370, 19, 65539, 655371, 19, 65539, 655372, 19, 65539, 655373, 19, 65539, 655374, 19, 65539, 655375, 19, 65539, 655376, 19, 65539, 655377, 19, 65539, 655378, 19, 65539, 655379, 19, 65540, 720896, 19, 196609, 720897, 19, 196609, 720898, 19, 196609, 720899, 19, 196609, 720900, 19, 196609, 720901, 19, 196609, 720902, 19, 196609, 720903, 19, 196609, 720904, 19, 196609, 720905, 19, 196609, 720906, 19, 196609, 720907, 19, 196609, 720908, 19, 196609, 720909, 19, 196609, 720910, 19, 196609, 720911, 19, 196609, 720912, 19, 196609, 720913, 19, 196609, 720914, 19, 196609, 720915, 19, 196609 )

[node name="Objects" type="TileMap" parent="MapsContainer"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 16
collision_mask = 0
format = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Nature" type="TileMap" parent="MapsContainer"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Actors16" type="TileMap" parent="MapsContainer"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="Actors32" type="TileMap" parent="MapsContainer"]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 524290, 0, 0 )

[node name="Actors64" type="TileMap" parent="MapsContainer"]
format = 1

[node name="PlayerContainer" type="Node2D" parent="."]

[node name="Player" parent="PlayerContainer" instance=ExtResource( 6 )]
position = Vector2( 96, 48 )

[node name="EnemiesContainer" type="Node2D" parent="."]

[node name="PickupsContainer" type="Node2D" parent="."]

[node name="TriggerableContainer" type="Node2D" parent="."]

[node name="Portal" parent="TriggerableContainer" instance=ExtResource( 3 )]
position = Vector2( 256, 128 )
change_to = "LevelA"
